written all the html

--- a/index.html
+++ b/index.html
@@ -17,31 +17,48 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <main>
+    <div class="container">
+      <h1>Reliable, efficient delivery</h1>
+      <h2>Powered by Technology</h2>
+      <p>Our Artificial Intelligence powered tools use millions of project data points 
+        to ensure that your project is successful</p>
+      
+      <div class="card">
+        <h3>Supervisor</h3>
+        <p>Monitors activity to identify project roadblocks</p>
+        <figure>
+          <img src="images/icon-supervisor.svg" alt="Immagine di una lente d'ingrandimento con dentro un occhio">
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+        </figure>
+      </div>
+      <div class="card">
+        <h3>Team Builder</h3>
+        <p>Scans our talent network to create the optimal team for your project</p>
+        <figure>
+          <img src="images/icon-team-builder.svg" alt="Immagine di una casa davanti a un certificato">
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+        </figure>
+      </div>
+      <div class="card">
+        <h3>Karma</h3>
+        <p>Regularly evaluates our talent to ensure quality</p>
+        <figure>
+          <img src="images/icon-karma.svg" alt="immagine di una lampadina accesa">
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+        </figure>
+      </div>
+      <div class="card">
+        <h3>Calculator</h3>
+        <p>Uses data from past projects to provide better delivery estimates</p>
+        <figure>
+          <img src="images/icon-calculator.svg" alt="immagine di un pc">
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+        </figure>
+      </div>
+      
+    </div>
+  </main>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
 </html>
