--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 <body>
   <main>
     <div class="container">
-      <h1>Reliable, efficient delivery</h1>
-      <h2>Powered by Technology</h2>
-      <p>Our Artificial Intelligence powered tools use millions of project data points 
-        to ensure that your project is successful</p>
+      <div class="intro">
+        <h1>Reliable, efficient delivery</h1>
+        <h2>Powered by Technology</h2>
+        <p>Our Artificial Intelligence powered tools use millions of project data points 
+          to ensure that your project is successful</p>
+
+      </div>
       
       <div class="card">
         <h3>Supervisor</h3>
