--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <div class="container">
       <div class="intro">
-        <h1>Reliable, efficient delivery</h1>
+        <h1 class="font-weight">Reliable, efficient delivery</h1>
         <h2>Powered by Technology</h2>
         <p>Our Artificial Intelligence powered tools use millions of project data points 
           to ensure that your project is successful</p>
