--- a/index.html
+++ b/index.html
@@ -20,40 +20,40 @@
   <main>
     <div class="container">
       <div class="intro">
-        <h1 class="font-weight">Reliable, efficient delivery</h1>
-        <h2>Powered by Technology</h2>
-        <p>Our Artificial Intelligence powered tools use millions of project data points 
+        <h1 class="font-weight light">Reliable, efficient delivery</h1>
+        <h2 class="dark">Powered by Technology</h2>
+        <p class="light">Our Artificial Intelligence powered tools use millions of project data points 
           to ensure that your project is successful</p>
 
       </div>
       
-      <div class="card">
-        <h3>Supervisor</h3>
-        <p>Monitors activity to identify project roadblocks</p>
+      <div class="card supervisor">
+        <h3 class="dark">Supervisor</h3>
+        <p class="light">Monitors activity to identify project roadblocks</p>
         <figure>
           <img src="images/icon-supervisor.svg" alt="Immagine di una lente d'ingrandimento con dentro un occhio">
 
         </figure>
       </div>
-      <div class="card">
-        <h3>Team Builder</h3>
-        <p>Scans our talent network to create the optimal team for your project</p>
+      <div class="card team-builder">
+        <h3 class="dark">Team Builder</h3>
+        <p class="light">Scans our talent network to create the optimal team for your project</p>
         <figure>
           <img src="images/icon-team-builder.svg" alt="Immagine di una casa davanti a un certificato">
 
         </figure>
       </div>
-      <div class="card">
-        <h3>Karma</h3>
-        <p>Regularly evaluates our talent to ensure quality</p>
+      <div class="card karma">
+        <h3 class="dark">Karma</h3>
+        <p class="light">Regularly evaluates our talent to ensure quality</p>
         <figure>
           <img src="images/icon-karma.svg" alt="immagine di una lampadina accesa">
 
         </figure>
       </div>
-      <div class="card">
-        <h3>Calculator</h3>
-        <p>Uses data from past projects to provide better delivery estimates</p>
+      <div class="card calculator">
+        <h3 class="dark">Calculator</h3>
+        <p class="light">Uses data from past projects to provide better delivery estimates</p>
         <figure>
           <img src="images/icon-calculator.svg" alt="immagine di un pc">
 
