added a div to use as a row

--- a/index.html
+++ b/index.html
@@ -26,39 +26,43 @@
           to ensure that your project is successful</p>
 
       </div>
+
+      <div class="row">
+
+        <div class="card supervisor">
+          <h3 class="dark">Supervisor</h3>
+          <p class="light">Monitors activity to identify project roadblocks</p>
+          <figure>
+            <img src="images/icon-supervisor.svg" alt="Immagine di una lente d'ingrandimento con dentro un occhio">
+  
+          </figure>
+        </div>
+        <div class="card team-builder">
+          <h3 class="dark">Team Builder</h3>
+          <p class="light">Scans our talent network to create the optimal team for your project</p>
+          <figure>
+            <img src="images/icon-team-builder.svg" alt="Immagine di una casa davanti a un certificato">
+  
+          </figure>
+        </div>
+        <div class="card karma">
+          <h3 class="dark">Karma</h3>
+          <p class="light">Regularly evaluates our talent to ensure quality</p>
+          <figure>
+            <img src="images/icon-karma.svg" alt="immagine di una lampadina accesa">
+  
+          </figure>
+        </div>
+        <div class="card calculator">
+          <h3 class="dark">Calculator</h3>
+          <p class="light">Uses data from past projects to provide better delivery estimates</p>
+          <figure>
+            <img src="images/icon-calculator.svg" alt="immagine di un pc">
+  
+          </figure>
+        </div>
+      </div>
       
-      <div class="card supervisor">
-        <h3 class="dark">Supervisor</h3>
-        <p class="light">Monitors activity to identify project roadblocks</p>
-        <figure>
-          <img src="images/icon-supervisor.svg" alt="Immagine di una lente d'ingrandimento con dentro un occhio">
-
-        </figure>
-      </div>
-      <div class="card team-builder">
-        <h3 class="dark">Team Builder</h3>
-        <p class="light">Scans our talent network to create the optimal team for your project</p>
-        <figure>
-          <img src="images/icon-team-builder.svg" alt="Immagine di una casa davanti a un certificato">
-
-        </figure>
-      </div>
-      <div class="card karma">
-        <h3 class="dark">Karma</h3>
-        <p class="light">Regularly evaluates our talent to ensure quality</p>
-        <figure>
-          <img src="images/icon-karma.svg" alt="immagine di una lampadina accesa">
-
-        </figure>
-      </div>
-      <div class="card calculator">
-        <h3 class="dark">Calculator</h3>
-        <p class="light">Uses data from past projects to provide better delivery estimates</p>
-        <figure>
-          <img src="images/icon-calculator.svg" alt="immagine di un pc">
-
-        </figure>
-      </div>
       
     </div>
   </main>
