fixed the layout for the largest breakpoint

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="row">
-        <div class="col">
+        <div class="col margin-top">
           <div class="card supervisor">
             <h3 class="dark">Supervisor</h3>
             <p class="light">Monitors activity to identify project roadblocks</p>
@@ -61,7 +61,7 @@
 
         </div>
         </div>
-        <div class="col">
+        <div class="col margin-top">
           <div class="card calculator">
             <h3 class="dark">Calculator</h3>
             <p class="light">Uses data from past projects to provide better delivery estimates</p>
