put a header tag inspired by a solution I reviewed

--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <main>
-    <div class="container">
+  <header>
+    
       <div class="intro">
         <h1 class="font-weight light">Reliable, efficient delivery</h1>
         <h2 class="dark">Powered by Technology</h2>
         <p class="light">Our Artificial Intelligence powered tools use millions of project data points 
           to ensure that your project is successful</p>
-
+  
       </div>
 
+  </header>
+  <main>
+    <div class="container">
       <div class="row">
         <div class="col margin-top">
           <div class="card supervisor">
